feat: 更新 meta 資訊

--- a/frontend/public/locales/zh-CN/common.json
+++ b/frontend/public/locales/zh-CN/common.json
@@ -1,5 +1,7 @@
 {
   "DiuDiu": "丢丢",
+  "diudiu,game": "丢丢,游戏",
+  "DiuDiu is DiuDiu DiuDiu": "丢丢就是丢丢丢丢",
 
   "Stats": "统计",
   "Your rolling times is {{count}}": "你丢了 {{count}} 次",
