--- a/frontend/public/locales/zh-TW/common.json
+++ b/frontend/public/locales/zh-TW/common.json
@@ -1,5 +1,7 @@
 {
   "DiuDiu": "丟丟",
+  "diudiu,game": "丟丟,遊戲",
+  "DiuDiu is DiuDiu DiuDiu": "丟丟就是丟丟丟丟",
 
   "Stats": "統計",
   "Your rolling times is {{count}}": "你丟了 {{count}} 次",
