--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1,5 +1,7 @@
 {
   "DiuDiu": "DiuDiu",
+  "diudiu,game": "diudiu,game",
+  "DiuDiu is DiuDiu DiuDiu": "DiuDiu is DiuDiu DiuDiu",
 
   "Stats": "Stats",
   "Your rolling times is {{count}}": "Your rolling times is {{count}}",
